fixed spacing

--- a/admin-dashboard.css
+++ b/admin-dashboard.css
@@ -9,7 +9,7 @@ body {
 } */
 
 p {
-    margin-bottom: 0px;
+    margin: 0px;
 }
 
 .first {
@@ -387,7 +387,26 @@ nav ul li:hover .sub-menu {
 }
 
 input {
-    width: 70%;
+    width: 100%;
+    height: 30px;
+    /* padding: 12px 0px; */
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    border-width: 0.5px;
+}
+
+input[type=file] {
+    height: auto;
+    width: auto;
+}
+
+button {
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .dropdown-check-list {
@@ -395,6 +414,8 @@ input {
 }
 
 .dropdown-check-list .anchor {
+    margin-top: 10px;
+    margin-bottom: 10px;
     position: relative;
     cursor: pointer;
     display: inline-block;
@@ -443,7 +464,8 @@ input {
 }
 
 input[type=checkbox] {
-    width: 20px;
+    margin: 50px;
+    /* width: 20px; */
     float: left;
 }
 
@@ -469,4 +491,62 @@ li.size-list {
 
 .dropdown-check-list.visible .sizes {
     display: block;
+}
+
+input[type="checkbox"] {
+    /* Add if not using autoprefixer */
+    -webkit-appearance: none;
+    /* Remove most all native input styles */
+    appearance: none;
+    /* For iOS < 15 */
+    background-color: var(--form-background);
+    /* Not removed via appearance */
+    margin: 0;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 1px solid #A2A5A8;
+    border-radius: 4px;
+    opacity: 1;
+    font: inherit;
+    color: currentColor;
+    width: 20px;
+    height: 20px;
+    transform: translateY(-0.075em);
+    display: grid;
+    place-content: center;
+}
+
+input[type="checkbox"]::before {
+    content: "";
+    width: 0.65em;
+    height: 0.65em;
+    clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+    transform: scale(0);
+    transform-origin: bottom left;
+    transition: 120ms transform ease-in-out;
+    box-shadow: inset 1em 1em var(--form-control-color);
+    /* Windows High Contrast Mode */
+    background-color: CanvasText;
+}
+
+input[type="checkbox"]:checked::before {
+    transform: scale(1);
+}
+
+input[type="checkbox"]:focus {
+    outline: max(2px, 0.15em) solid currentColor;
+    outline-offset: max(2px, 0.15em);
+}
+
+input[type="checkbox"]:disabled {
+    --form-control-color: var(--form-control-disabled);
+    color: var(--form-control-disabled);
+    cursor: not-allowed;
+}
+
+input[type=text] {
+    height: 30px;
+}
+
+input[type=number] {
+    height: 30px;
 }
